# Odin

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  package.json
.voidbot/birth/: voidbot-face-birth.json
.voidbot/birth/runner/: birth-runner-summary.json
.voidbot/birth/runner/repo-memory/: output-schema.json  prompt.md
.voidbot/birth/runner/repo-personality/: output-schema.json  prompt.md
.voidbot/birth/runner/repo-trajectory/: output-schema.json  prompt.md
.voidbot/birth/runner/startup/: repo-initialization-startup-summary.json  repo-initialization-startup-summary.md
.voidbot/birth/runner/startup/projection/: projection.msgpack
.voidbot/birth/runner/startup/repo-memory/: repo-memory-distiller-packet.json  repo-memory-distiller-packet.md  repo-memory-distiller-prompt.md
.voidbot/birth/runner/startup/repo-personality/: repo-personality-distiller-packet.json  repo-personality-distiller-packet.md  repo-personality-distiller-prompt.md
.voidbot/birth/runner/startup/repo-trajectory/: repo-trajectory-distiller-packet.json  repo-trajectory-distiller-packet.md  repo-trajectory-distiller-prompt.md
.voidbot/birth/terrain/: baseline.msgpack  repo-personality-scout-summary.json  repo-personality-scout-summary.md
.voidbot/state/: README.md  odin.cc
.voidbot/status/: void-memory-maintenance.json
.voidbot/voice/: README.md  identity.json
crates/cultnet-impair/: Cargo.toml
crates/cultnet-impair/src/: main.rs
crates/gjallar-daemon/: Cargo.toml
crates/gjallar-daemon/src/: main.rs
crates/idunn-daemon/: Cargo.toml
crates/idunn-daemon/src/: main.rs  provisioning.rs
crates/idunn-daemon/tests/fixtures/: README.md  bifrost-release-authority-v1.payload.hex
crates/muninn-daemon/: Cargo.toml
crates/muninn-daemon/src/: main.rs  media_packetizer.rs
crates/muninn-move-tracker/: Cargo.toml  README.md
crates/muninn-move-tracker/shaders/: MoveSphereCandidate.comp.hlsl
crates/muninn-move-tracker/src/: lib.rs
crates/muninn-psmoveapi-tracker/: Cargo.toml
crates/muninn-psmoveapi-tracker/src/: lib.rs
crates/odin-core/: Cargo.toml
crates/odin-core/examples/: dump_move_tracker_health.rs  dump_provider_endpoints.rs
crates/odin-core/src/: discovery.rs  documents.rs  gjallar.rs  idunn.rs  lib.rs  pipeline.rs  ports.rs  repository.rs
crates/sleipnir-daemon/: Cargo.toml
crates/sleipnir-daemon/examples/: dump_provider_catalog.rs  vigem_quick_tap_fixture.rs  write_input_mapping.rs  xinput_edge_observer.rs
crates/sleipnir-daemon/src/: main.rs
docs/: architecture.md  gjallar.md  idunn-deployment-handshake.md  idunn-signed-daemon-health-authority.md  idunn.md  muninn-media-streaming.md  muninn.md  realtime-delivery-authority.md  realtime-impairment-harness.md  transport-shortcut-inventory.md
native/muninn-video-encoder/: CMakeLists.txt  README.md  main.cpp
native/probes/: psmoveapi_tracker_probe.c
native/psmoveapi-muninn/: README.md  expected-color-observer.patch
personas/: gjallar.persona_state.cc  gjallar.persona_state.json
scripts/: activate-muninn-raven-av-srt.cmd  activate-muninn-raven-av-srt.ps1  activate-muninn-raven-media.ps1  build-muninn-video-encoder.ps1  check-syntax.cjs  claim-nightwing-usb-moves.ps1  deploy-nightwing-gjallar.cmd  deploy-nightwing-gjallar.ps1  deploy-raven-muninn-binary.ps1  deploy-raven-sleipnir.ps1  deploy-yggdrasil-bifrost-persona-feedback.ps1  deploy-yggdrasil-heimdall.cmd  deploy-yggdrasil-heimdall.ps1  deploy-yggdrasil-repixelizer.cmd  deploy-yggdrasil-repixelizer.ps1  deploy-yggdrasil-source-app.ps1  deploy-yggdrasil-streampixels.cmd  deploy-yggdrasil-streampixels.ps1  enable-starfire-lan-rudp-firewall.ps1  get-nightwing-move-state-sources.ps1  health-hermodr.ps1  health-idunn-swarm-deployment-coverage.cmd  health-idunn-swarm-deployment-coverage.ps1  health-mimir-eve-dashboard.cmd  health-muninn.cmd  health-muninn.ps1  health-nightwing-eve-browser-reference.cmd  health-nightwing-eve-browser-reference.ps1  health-nightwing-eve-dashboard.cmd  health-nightwing-eve-dashboard.ps1  health-nightwing-gjallar.cmd  health-nightwing-gjallar.ps1  health-nightwing-muninn.cmd  health-nightwing-muninn.ps1  health-odin.cmd  health-odin.ps1  health-raven-capture-mux.cmd  health-raven-capture-mux.ps1  health-starfire-muninn.cmd  health-starfire-muninn.ps1  (+52 more)
scripts/linux/: deploy-yggdrasil-heimdall  idunn-yggdrasil  idunn-yggdrasil.service  idunn-yggdrasil.sudoers
src/: hermodr-daemon.cjs  hermodr-state-stream.cjs  odin-coordinator.cjs
src/Gjallar/: Gjallar.csproj  Program.cs
src/Idunn/: Idunn.csproj  Program.cs  README.md
src/odin/: config.cjs  cultnet-rudp.cjs  documents.cjs  idunn-rudp.cjs  interfaces.cjs  layout.cjs  live-publication-source.cjs  marquee.cjs  observations.cjs  probes.cjs  provider-ingress.cjs  provider-session-ingress.cjs  state.cjs  surface.cjs  utils.cjs  websocket.cjs
test/: hermodr-catalog.test.cjs  hermodr-live-publication.test.cjs  hermodr-state-stream.test.cjs  provider-ingress.test.cjs
tests/realtime-impairment/: burst-4.toml  burst-8.toml  clean.toml  delay-jitter.toml  duplicate.toml  loss-1pct.toml  loss-3pct.toml  loss-5pct.toml  reorder.toml  stall-250ms.toml
