[workspace]
members = [
    "crates/sleipnir-daemon",
    "crates/idunn-daemon",
    "crates/muninn-daemon",
    "crates/muninn-move-tracker",
    "crates/odin-core",
]
resolver = "3"
exclude = [
    "vendor/cultcache-rs",
    "vendor/cultmesh-rs",
    "vendor/cultnet-rs",
]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false
