[package]
name = "odin-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "odin_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
cultcache-rs = { path = "E:/Projects/EpiphanyAgent/vendor/cultcache-rs" }
cultmesh-rs = { path = "E:/Projects/EpiphanyAgent/vendor/cultmesh-rs" }
serde_json = "1"
cultnet-rs = { path = "E:/Projects/EpiphanyAgent/vendor/cultnet-rs" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
