[package]
name = "sleipnir-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sleipnir"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cultmesh-rs = { path = "../../vendor/cultmesh-rs" }
cultnet-rs = { path = "../../vendor/cultnet-rs" }
cultcache-rs = { path = "../../vendor/cultcache-rs" }
odin-core = { path = "../odin-core" }
rmp-serde = "1.3"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
vigem-client = "0.1.4"
